@@ -20,69 +20,43 @@ pipeline {
   agent none
   options {
     buildDiscarder(logRotator(numToKeepStr: '3'))
-    timeout(time: 1, unit: 'HOURS')
+    timeout(time: 2, unit: 'HOURS')
   }
   triggers {
     cron('@weekly')
     pollSCM('@daily')
   }
   stages {
-    stage ('Directory LDAP API') {
+    stage ('Directory Server (ApacheDS)') {
       parallel {
-        stage ('Linux Java 8') {
+        stage ('Build Linux Java 8') {
           agent {
             docker {
               label 'ubuntu'
               image 'maven:3-jdk-8'
-              args "-v /dev/urandom:/dev/random -v ${env.JENKINS_HOME}/.m2:/var/maven/.m2 -e MAVEN_CONFIG=/var/maven/.m2"
+              args "-v ${env.JENKINS_HOME}/.m2:/var/maven/.m2 -e MAVEN_CONFIG=/var/maven/.m2"
             }
           }
-          stages {
-            stage ('Compile') {
-              steps {
-                sh 'mvn -V clean verify -DskipTests -Duser.home=/var/maven'
-              }
-            }
-            stage ('Test') {
-              steps {
-                sh '''
-                export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128m"
-                mvn -V clean verify -Duser.home=/var/maven'''
-              }
-              post {
-                always {
-                  junit '**/target/surefire-reports/*.xml'
-                }
-              }
-            }
+          steps {
+            sh 'mvn -V clean verify -Duser.home=/var/maven'
           }
           post {
             always {
+              junit '**/target/surefire-reports/*.xml'
               deleteDir()
             }
           }
         }
-        stage ('Linux Java 11') {
+        stage ('Build Linux Java 11') {
           agent {
             docker {
               label 'ubuntu'
               image 'maven:3-jdk-11'
-              args "-v /dev/urandom:/dev/random -v ${env.JENKINS_HOME}/.m2:/var/maven/.m2 -e MAVEN_CONFIG=/var/maven/.m2"
+              args "-v ${env.JENKINS_HOME}/.m2:/var/maven/.m2 -e MAVEN_CONFIG=/var/maven/.m2"
             }
           }
-          stages {
-            stage ('Compile') {
-              steps {
-                sh 'mvn -V clean verify -DskipTests -Duser.home=/var/maven'
-              }
-            }
-            stage ('Test') {
-              steps {
-                sh '''
-                export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128m"
-                mvn -V clean verify -Duser.home=/var/maven'''
-              }
-            }
+          steps {
+            sh 'mvn -V clean verify -Duser.home=/var/maven'
           }
           post {
             always {
@@ -90,7 +64,7 @@ pipeline {
             }
           }
         }
-        stage ('Windows Java 8') {
+        stage ('Build Windows Java 8') {
           agent {
             label 'Windows'
           }
@@ -98,24 +72,33 @@ pipeline {
             beforeAgent true
             environment name: 'JENKINS_URL', value: 'https://builds.apache.org/'
           }
-          stages {
-            stage ('Compile') {
-              steps {
-                bat '''
-                set JAVA_HOME=F:\\jenkins\\tools\\java\\latest1.8
-                F:\\jenkins\\tools\\maven\\latest3\\bin\\mvn -V clean verify -DskipTests
-                '''
-              }
+          steps {
+            bat '''
+            set JAVA_HOME=F:\\jenkins\\tools\\java\\latest1.8
+            F:\\jenkins\\tools\\maven\\latest3\\bin\\mvn -V clean verify
+            '''
+          }
+          post {
+            always {
+              deleteDir()
             }
-            stage ('Test') {
-              steps {
-                bat '''
-                set JAVA_HOME=F:\\jenkins\\tools\\java\\latest1.8
-                set MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128m"
-                F:\\jenkins\\tools\\maven\\latest3\\bin\\mvn -V clean verify
-                '''
-              }
+          }
+        }
+        stage ('Deploy Linux Java 8') {
+          agent {
+            docker {
+              label 'ubuntu'
+              image 'maven:3-jdk-8'
+              args "-v ${env.JENKINS_HOME}/.m2:/var/maven/.m2 -e MAVEN_CONFIG=/var/maven/.m2"
             }
+          }
+          when {
+            beforeAgent true
+            branch 'master'
+            environment name: 'JENKINS_URL', value: 'https://builds.apache.org/'
+          }
+          steps {
+            sh 'mvn -V clean deploy -Duser.home=/var/maven'
           }
           post {
             always {
@@ -127,4 +110,3 @@ pipeline {
     }
   }
 }
-
